[gd_scene load_steps=10 format=3 uid="uid://84pik03yyo2a"]

[ext_resource type="Script" uid="uid://8n8iycrh7tt" path="res://entities/mobs/jormungandr/jormungandr.gd" id="1_a78gw"]
[ext_resource type="Script" uid="uid://b26x67y683mfj" path="res://entities/components/vehicle_movement.gd" id="3_gng5u"]
[ext_resource type="Script" uid="uid://cqru7phnxp24n" path="res://entities/components/boid_steering.gd" id="4_oo7y3"]
[ext_resource type="Script" uid="uid://csm10132uq4ly" path="res://entities/mobs/boid_behaviours/encircle.gd" id="5_8g7nw"]
[ext_resource type="Script" uid="uid://ccoo7rbor1to6" path="res://entities/mobs/boid_behaviours/maintain_distance.gd" id="6_a78gw"]
[ext_resource type="Script" uid="uid://dq1ffjlcyvgr0" path="res://entities/components/boid_debug.gd" id="7_a78gw"]
[ext_resource type="Script" uid="uid://dfateb8yaoroi" path="res://entities/components/snake_graphics.gd" id="8_dnqwt"]
[ext_resource type="Script" uid="uid://fbcs0md2xng0" path="res://entities/components/trail.gd" id="8_pyit7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o00ia"]
radius = 48.0

[node name="Jormungandr" type="Node2D"]
script = ExtResource("1_a78gw")
length = 45
health = 500

[node name="VehicleMovement" type="Node" parent="."]
script = ExtResource("3_gng5u")
speed = 120.0
metadata/_custom_type_script = "uid://b26x67y683mfj"

[node name="BoidSteering" type="Node" parent="." node_paths=PackedStringArray("vehicle_movement")]
script = ExtResource("4_oo7y3")
vehicle_movement = NodePath("../VehicleMovement")
metadata/_custom_type_script = "uid://cqru7phnxp24n"

[node name="Encircle" type="Node" parent="BoidSteering"]
script = ExtResource("5_8g7nw")
metadata/_custom_type_script = "uid://csm10132uq4ly"

[node name="MaintainDistance" type="Node" parent="BoidSteering"]
script = ExtResource("6_a78gw")
target_distance = 300.0
metadata/_custom_type_script = "uid://ccoo7rbor1to6"

[node name="Collider" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource("CircleShape2D_o00ia")

[node name="BoidDebug" type="Node2D" parent="." node_paths=PackedStringArray("boid_steering")]
visible = false
script = ExtResource("7_a78gw")
boid_steering = NodePath("../BoidSteering")
metadata/_custom_type_script = "uid://dq1ffjlcyvgr0"

[node name="Trail" type="Node" parent="."]
script = ExtResource("8_pyit7")
metadata/_custom_type_script = "uid://fbcs0md2xng0"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(9.53674e-07, -1.90735e-06)
scale = Vector2(6, 6)

[node name="SnakeGraphics" type="Node2D" parent="."]
script = ExtResource("8_dnqwt")
colour = Color(0.817324, 0.913215, 0.989904, 1)
outline_colour = Color(0.796446, 0.31883, 0.759028, 1)
outline_width = 4.0
body_width = 78.0
head_width = 48.0
metadata/_custom_type_script = "uid://dfateb8yaoroi"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered" flags=6]
